# so101-biolab-automation

./: .env.example  .gitignore  .gitmessage  .gitmodules  .lychee.toml  .markdownlint.json  .pre-commit-config.yaml  .rtk.toml  AGENTS.md  AGENT_LEARNINGS.md  AGENT_REQUESTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MEMORY.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
.claude/rules/: compound-learning.md  context-management.md  core-principles.md  robotics-safety.md  testing.md
.claude/scripts/: statusline.sh
.claude/skills/committing-staged-with-message/: SKILL.md
.claude/skills/compacting-context/: SKILL.md
.claude/skills/creating-pr-from-branch/: SKILL.md
.claude/skills/designing-backend/: SKILL.md
.claude/skills/enforcing-doc-hierarchy/: SKILL.md
.claude/skills/generating-tech-spec/: SKILL.md
.claude/skills/generating-tech-spec/references/: tech-spec-formats.md
.claude/skills/hardening-codebase/: SKILL.md
.claude/skills/hardening-codebase/references/: lint-tightening-checklist.md  review-agents.md
.claude/skills/implementing-python/: SKILL.md
.claude/skills/maintaining-agents-md/: SKILL.md
.claude/skills/researching-codebase/: SKILL.md
.claude/skills/reviewing-code/: SKILL.md
.claude/skills/testing-python/: SKILL.md
.claude/skills/testing-tdd/: SKILL.md
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yaml  question.md
.github/scripts/: create_pr.sh  delete_branch_pr_tag.sh
.github/templates/: llms.txt.tpl
.github/workflows/: bump-my-version.yaml  codeql.yaml  generate-sbom.yaml  links-fail-fast.yaml  lint-md-links.yml  pytest.yaml  ruff.yaml  validate.yaml  write-llms-txt.yaml
app/dashboard/: server.py
app/hardware/: README.md  parts.json  render.py
app/hardware/scad/: README.md
app/hardware/slicer/: validate.py
app/so101/: arms.py  bento_lab.py  camera.py  cartesian_platform.py  coordinate_cmd.py  eln_client.py  pipette.py  plate.py  pylabrobot_backend.py  safety.py  scan_servos.py  tool_changer.py  workflow.py  xz_gantry.py
configs/: arms.yaml  bento_lab.yaml  cartesian.yaml  eln.yaml  pipette.yaml  plate_layout.yaml  tool_dock.yaml  xz_gantry.yaml
docs/: UserStory.md  architecture.md  demo-scenarios.md  llms.txt  notes.md  outlook-ceiling-rail.md  outlook-integrations.md  outlook-printer-platforms.md  research.md  roadmap.md
docs/SBOM/: github-depgraph.spdx.json  syft-scan.spdx.json
docs/hardware/: BOM.md  bringup.md  cad-tooling.md  prusa-mk4-ops.md  two-dof-pipette.md
hardware/: parts.json  render.py
hardware/cad/: assembly_so101_multi.py  assembly_so101_pipette.py  dpette_cradle.py  fridge_hook.py  gripper_tips.py  pipette_mount.py  plate_holder.py  stl_to_svg.py  theme_svgs.py  tip_ejection_bar.py  tip_rack_holder.py  tool_changer.py  tool_dock.py  xz_carriage.py  xz_gantry_frame.py
hardware/cad/deferred/: xz_carriage.py  xz_gantry_frame.py
hardware/cad/dpette/: assembly_multi_focused.py  dpette_cradle.py  dpette_handle.py  dpette_multi_handle.py  dpette_tip_release.py  tip_ejection_bar.py
hardware/cad/labware/: plate_holder.py  tip_rack_holder.py
hardware/cad/so101/: fridge_hook.py  gripper_tips.py  pipette_mount.py  tool_changer.py  tool_dock.py
hardware/cad/util/: stl_to_svg.py  theme_svgs.py
hardware/scad/: fridge_hook.scad  gripper_tips.scad  tip_rack_holder.scad  tool_dock.scad
hardware/scans/dpette/: 0410_02_mesh.ply  README.md
hardware/slicer/: validate.py
hardware/slicer/profiles/: pla_plus_02mm.json  prusa_mk4_pla_02mm.ini  prusa_mk4_tpu_02mm.ini  tpu_95a_02mm.json
hardware/step/dpette/: dpette_cam_arm.step  dpette_ejector_lever.step  dpette_handle.step  dpette_multi_cradle.step  dpette_multi_handle.step  dpette_single_cradle.step  dpette_tip_release.step  tip_ejection_bar.step
hardware/step/labware/: 96well_plate_holder.step  tip_rack_holder.step
hardware/step/so101/: gripper_tips_tpu.step  pipette_mount_so101.step  tool_cone_gripper.step  tool_cone_robot.step  tool_dock_3station.step
hardware/stl/: 96well_plate_holder.stl  README.md  fridge_hook_tool.stl  pipette_mount_so101.stl  tip_ejection_bar.stl  tool_cone_gripper.stl  xz_carriage_pipette_dock.stl  xz_gantry_frame.stl
hardware/stl/dpette/: dpette_cam_arm.stl  dpette_ejector_lever.stl  dpette_ejector_lever_oriented.stl  dpette_handle.stl  dpette_multi_cradle.stl  dpette_multi_handle.stl  dpette_multi_tip_release.stl  dpette_single_cradle.stl  dpette_tip_release.stl  tip_ejection_bar.stl
hardware/stl/labware/: 96well_plate_holder.stl  tip_rack_holder.stl
hardware/stl/so101/: assembly_so101_multi.stl  assembly_so101_pipette.stl  gripper_tips_tpu.stl  pipette_mount_so101.stl  tool_cone_gripper.stl  tool_cone_robot.stl  tool_dock_3station.stl
scripts/: coordinate_cmd.py  patch_firmware_check.py  run_demo.py
src/biolab/: __init__.py  arms.py  bento_lab.py  camera.py  pipette.py  plate.py  safety.py  workflow.py  xz_gantry.py
src/dashboard/: __init__.py  server.py
src/hardware/: README.md  render.py
src/hardware/slicer/: validate.py
src/so101/: arms.py  camera.py  plate.py  safety.py  tool_changer.py
src/so101/cli/: __init__.py  foxglove_viz.py  patch_lerobot.py  run_demo.py
tests/: _paths.py  conftest.py  test_arms.py  test_bento_lab.py  test_camera.py  test_config_loading.py  test_coordinate_cmd.py  test_dashboard.py  test_pipette.py  test_plate_coords.py  test_run_demo.py  test_safety.py  test_scad_svg.py  test_slicer_validate.py  test_tool_changer.py  test_workflow.py  test_xz_gantry.py
tests/dashboard/: conftest.py  test_dashboard.py
tests/hardware/: test_scad_svg.py  test_slicer_validate.py
tests/integration/: conftest.py  test_coordinate_cmd.py  test_patch_lerobot_compat.py  test_run_demo.py
tests/so101/: conftest.py  test_arms.py  test_bento_lab.py  test_camera.py  test_cartesian_platform.py  test_eln_client.py  test_pipette.py  test_plate_coords.py  test_pylabrobot_backend.py  test_safety.py  test_tool_changer.py  test_workflow.py  test_xz_gantry.py
(+38 files in other folders)
