[project]
name = "so101-biolab-automation"
version = "0.1.0"
description = "Dual SO-101 robotic arm bio-lab automation: pipetting, tool changing, remote oversight"
readme = "README.md"
license = "Apache-2.0"
# Pin 3.12: build123d → cadquery-ocp → VTK has no cp313 wheels
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "websockets>=13.0",
    "opencv-python>=4.10",
    "pyserial>=3.5",
    "pyyaml>=6.0",
    "numpy>=1.26",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pyright>=1.1",
    "complexipy>=0.8",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "hypothesis>=6.100",
    "inline-snapshot>=0.18",
    "httpx>=0.27",
]
# train = [  # ACT policy training — uncomment when GPU available
#     "torch>=2.4",
#     "wandb>=0.18",
# ]
cad = [
    "build123d>=0.10",
]

[tool.hatch.build.targets.wheel]
packages = ["app/so101", "app/dashboard"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
default-groups = ["dev", "test"]
exclude-newer = "2026-04-11T00:00:00Z"
link-mode = "copy"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "S", "SIM", "RUF", "PT"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S603"]   # assert is pytest; subprocess calls run project scripts
"app/hardware/**" = ["S603"]    # subprocess calls run trusted internal scripts

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["app/so101", "app/dashboard", "app/hardware/render.py", "app/hardware/slicer"]
exclude = ["app/hardware/cad", "app/hardware/scad"]  # CAD/SCAD scripts use dynamic sys.path
reportMissingImports = "error"
reportUnusedVariable = "error"
reportInconsistentConstructor = "error"
reportConstantRedefinition = "error"

[tool.pytest.ini_options]
pythonpath = ["app"]
testpaths = ["tests"]
addopts = "--strict-markers -m 'not hardware and not network'"
asyncio_mode = "auto"
markers = [
    "integration: tests loading real config files",
    "network: tests requiring network access",
    "hardware: tests requiring physical SO-101 arms or cameras",
]
