[project]
name = "so101-biolab-automation"
version = "0.1.0"
description = "Dual SO-101 robotic arm bio-lab automation: pipetting, tool changing, remote oversight"
readme = "README.md"
license = "Apache-2.0"
# Pin 3.12: build123d → cadquery-ocp → VTK has no cp313 wheels
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "websockets>=13.0",
    "opencv-python>=4.10",
    "pyserial>=3.5",
    "pydantic>=2.10",
    "pydantic-settings[yaml]>=2.7",
    "pyyaml>=6.0",
    "numpy>=1.26",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pyright>=1.1",
    "complexipy>=0.8",
    "types-PyYAML>=6.0",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "hypothesis>=6.100",
    "inline-snapshot>=0.18",
    "httpx>=0.27",
]
# train = [  # ACT policy training — uncomment when GPU available
#     "torch>=2.4",
#     "wandb>=0.18",
# ]
cad = [
    "build123d>=0.10",
]
eln = [
    "elabapi-python>=0.4",
]
pylabrobot = [
    "pylabrobot>=0.2",
]

[tool.hatch.build.targets.wheel]
packages = ["app/so101", "app/dashboard"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
default-groups = ["dev", "test"]
exclude-newer = "2026-04-11T00:00:00Z"
link-mode = "copy"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "S", "SIM", "RUF", "PT", "ANN", "TCH", "PGH", "C90", "D"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S603", "ANN001", "ANN201", "D100", "D101", "D102", "D103", "D104", "D107"]
"app/hardware/cad/**" = ["S603", "ANN"]   # CAD scripts excluded from pyright; annotations deferred
"app/hardware/**" = ["S603"]    # subprocess calls run trusted internal scripts

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
extraPaths = ["app"]
include = ["app/so101", "app/dashboard"]
exclude = ["app/hardware"]  # CAD/render/slicer use dynamic imports without type stubs
reportMissingImports = "error"

[tool.pytest.ini_options]
pythonpath = ["app"]
testpaths = ["tests"]
addopts = "--strict-markers -m 'not hardware and not network'"
asyncio_mode = "auto"
markers = [
    "integration: tests loading real config files",
    "network: tests requiring network access",
    "hardware: tests requiring physical SO-101 arms or cameras",
]
