[project]
name = "so101-biolab-automation"
version = "0.1.0"
description = "Dual SO-101 robotic arm bio-lab automation: pipetting, tool changing, remote oversight"
readme = "README.md"
license = "Apache-2.0"
# Pin 3.12: build123d → cadquery-ocp → VTK has no cp313 wheels
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "websockets>=13.0",
    "opencv-python>=4.10",
    "pyserial>=3.5",
    "pydantic>=2.10",
    "pydantic-settings[yaml]>=2.7",
    "pyyaml>=6.0",
    "numpy>=1.26",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pyright>=1.1",
    "complexipy>=0.8",
    "types-PyYAML>=6.0",
    "opencv-stubs>=0.1.3",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "hypothesis>=6.100",
    "inline-snapshot>=0.18",
    "httpx>=0.27",
]
lerobot = [  # SO-101 teleoperation, recording, training (pulls torch)
    "lerobot[feetech]",
]
train = [  # ACT policy training — requires GPU; wandb opt-in via WANDB=1
    "lerobot[feetech]",
    "wandb>=0.18",
]
foxglove = [  # Live visualization + MCAP recording
    "foxglove-sdk>=0.4",
    "scipy>=1.0",
    "yourdfpy",
]
cad = [
    "build123d>=0.10",
]
eln = [
    "elabapi-python>=0.4",
]
pylabrobot = [
    "pylabrobot>=0.2",
]

[tool.hatch.build.targets.wheel]
packages = ["app/so101", "app/dashboard"]

[project.scripts]
so101-patch-lerobot = "so101.patch_lerobot:main"
so101-scan-servos = "so101.scan_servos:main"
so101-demo = "so101.run_demo:main"
so101-coord = "so101.coordinate_cmd:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
default-groups = ["dev", "test"]
exclude-newer = "2026-04-11T00:00:00Z"
link-mode = "copy"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "S", "SIM", "RUF", "PT", "ANN", "TCH", "PGH", "C90", "D"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S603", "ANN001", "ANN201", "D100", "D101", "D102", "D103", "D104", "D107"]
"app/hardware/cad/**" = ["S603", "ANN"]   # CAD scripts excluded from pyright; annotations deferred
"app/hardware/**" = ["S603"]    # subprocess calls run trusted internal scripts
"app/so101/foxglove_viz.py" = ["ANN401"]  # hardware CLI — untyped deps return Any
"app/so101/patch_lerobot.py" = ["E501"]  # triple-quoted strings mirror lerobot source verbatim

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
extraPaths = ["app"]
include = ["app/so101", "app/dashboard"]
exclude = [
    "app/hardware",           # CAD/render/slicer use dynamic imports without type stubs
    "app/so101/foxglove_viz.py",  # hardware CLI — foxglove/lerobot/scipy/yourdfpy all untyped
    "app/so101/scan_servos.py",   # hardware CLI — scservo_sdk is untyped
]
reportMissingImports = "error"
reportMissingTypeStubs = "none"  # lerobot, pyserial — installed but untyped

[tool.pytest.ini_options]
pythonpath = ["app"]
testpaths = ["tests"]
addopts = "--strict-markers -m 'not hardware and not network and not lerobot'"
asyncio_mode = "auto"
markers = [
    "integration: tests loading real config files",
    "network: tests requiring network access",
    "hardware: tests requiring physical SO-101 arms or cameras",
    "lerobot: tests requiring lerobot package installed (uv sync --group lerobot)",
]

[tool.bumpversion]
current_version = "0.1.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
commit = true
tag = true
allow_dirty = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
message = "Bump version: {current_version} → {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "README.md"
search = "version-{current_version}--alpha-58f4c2"
replace = "version-{new_version}-58f4c2"

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = """
## [Unreleased]
"""
replace = """
## [Unreleased]

## [{new_version}] - {now:%Y-%m-%d}
"""

[tool.coverage.run]
omit = ["app/so101/foxglove_viz.py"]  # hardware CLI — requires real arms + cameras
